# Advent2020

./: Advent2020.cabal  CHANGELOG.md  LICENSE  README.md  package.yaml
app/: Main.hs
src/: AoCArray.hs  Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Operators.hs
src/Day1/: Puzzle1.hs  Puzzle2.hs
src/Day10/: Puzzle1.hs  Puzzle2.hs
src/Day11/: Puzzle1.hs  Puzzle2.hs
src/Day12/: Puzzle1.hs  Puzzle2.hs
src/Day13/: Puzzle1.hs  Puzzle2.hs
src/Day14/: Puzzle1.hs  Puzzle2.hs
src/Day15/: Puzzle1.hs  Puzzle2.hs
src/Day16/: Puzzle1.hs
src/Day2/: Puzzle1.hs  Puzzle2.hs
src/Day3/: Puzzle1.hs  Puzzle2.hs
src/Day4/: Puzzle1.hs  Puzzle2.hs
src/Day5/: Puzzle1.hs  Puzzle2.hs
src/Day6/: Puzzle1.hs  Puzzle2.hs
src/Day7/: Puzzle1.hs  Puzzle2.hs
src/Day8/: Puzzle1.hs  Puzzle2.hs
src/Day9/: Puzzle1.hs  Puzzle2.hs
