cabal-version:       2.4
name:                Advent2020
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
license:             MIT
license-file:        LICENSE
author:              nathan wilson
maintainer:          nathan wilson <ntwilson@gmail.com>
copyright:           2020 nathan wilson
category:            Puzzles
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

common common-options
  build-depends:       base ^>= 4.13.0.0
                     , relude
                     , directory
  
  mixins:              base hiding (Prelude)
  
  ghc-options:         -Wall
                       -Werror

  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       NumericUnderscores
                       OverloadedStrings
                       ViewPatterns
                       PatternSynonyms

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     
      Day1.Puzzle1
    , Day1.Puzzle2
  other-modules:       
      Operators
    , Day1

executable Advent2020
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       Advent2020
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite Advent2020-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       Advent2020
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark Advent2020-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       gauge
                     , Advent2020
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
